# tsurugi_fdw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  alt_planner.c  dispatcher.cpp  dispatcher.h  ogawayama_fdw--0.0.sql  ogawayama_fdw--0.1.sql  ogawayama_fdw.c  ogawayama_fdw.control  ogawayama_fdw.cpp  ogawayama_fdw.h  test.sh  test_extra.sh  tsurugi_fdw--0.1.sql  tsurugi_fdw--1.0.0--1.1.0.sql  tsurugi_fdw--1.0.0--1.1.1.sql  tsurugi_fdw--1.0.0-BETA4.sql  tsurugi_fdw--1.0.0.sql  tsurugi_fdw--1.2.0--1.3.0.sql  tsurugi_fdw--1.3.0.sql  tsurugi_fdw.c  tsurugi_fdw.control  tsurugi_fdw.h  user-defined_function-0.1.sql
.github/: CODEOWNERS
alt_function/: alt_function.c  alt_function.cpp
alt_planner/: Makefile  alt_fdw.c  alt_planner.c  gcc.sh
alt_utility/: CMakeLists.txt  Command.cpp  Command.h  CreateTableCommand.h  DDL_command.h  Makefile  alt_utility.c  alt_utility.h  alter_role.cpp  alter_role.h  create_command.h  create_role.cpp  create_role.h  create_stmt.c  create_stmt.h  create_table.cpp  create_table.h  create_table_executor.cpp  create_table_executor.h  drop_command.h  drop_role.cpp  drop_role.h  drop_stmt.c  drop_stmt.h  drop_table.cpp  drop_table.h  drop_table_executor.cpp  grant_revoke_role.cpp  grant_revoke_role.h  grant_revoke_table.cpp  grant_revoke_table.h  grant_role.h  grant_table.h  index_stmt.c  index_stmt.h  role_managercmds.cpp  rolecmds.cpp  rolecmds.h  send_message.cpp  send_message.h  (+8 more)
alt_utility/alter_role/: alter_role.cpp
alt_utility/alter_table/: alter_table.cpp  alter_table_executor.cpp
alt_utility/create_index/: create_index.cpp  create_index.h  create_index_executor.cpp
alt_utility/create_role/: create_role.cpp  create_role.h
alt_utility/create_table/: create_table.cpp  create_table.h  create_table_executor.cpp  create_table_executor.h
alt_utility/drop_role/: drop_role.cpp  drop_role.h
alt_utility/drop_table/: drop_table_executor.cpp
alt_utility/grant_revoke_role/: grant_revoke_role.cpp
alt_utility/grant_revoke_table/: grant_revoke_table.cpp  grant_revoke_table.h
alt_utility/include/: create_index.h  create_index_executor.h  create_table.h  create_table_executor.h  drop_table.h  drop_table_executor.h  syscachecmds.h  table_managercmds.h
alt_utility/include/command/: create_command.h  ddl_command.h  drop_command.h  index_command.h
alt_utility/mock/message/: message.h
alt_utility/mock/metadata/: roles.cpp  roles.h
alt_utility/prepare_execute/: prepare_execute.cpp
alt_utility/src/: CMakeLists.txt  create_table.cpp
alt_utility/stub/: roles.cpp  roles.h
alt_utility/test/: CMakeLists.txt  test_util.cpp
common/: init.c  send_message.cpp  stub_connector.cpp  stub_manager.cpp  tsurugi.cpp
docs/: CREATE_TABLE.md  Metadata_APIs.md  NEC_20221208.md  README.md  Transaction.md  appendixes.md  jdbc_reference.md  message-broker.md  message-broker_API.md  message_reference.md  preface.md  psycopg_reference.md  setup.md  spring_reference.md  sql_reference.md  table_command_reference.md  tg_transaction.md  tsurugi_fdw.md  tutorial.md  tutorial_psycopg.md  tutorial_spring.md  udf_reference.md
example/: CMakeLists.txt  README.md  main.cpp  oltp_receiver.cpp  oltp_receiver.h
example/expected/tsurugi/metadata/: tables.json
expected/: alternative.out  case_sensitive_happy.out  case_sensitive_unhappy.out  ch-benchmark-ddl.out  create_index.out  create_index_happy.out  create_table.out  create_table_happy.out  create_table_restrict.out  create_table_syntax_type.out  create_table_unhappy.out  data_types.out  data_types_happy.out  data_types_unhappy.out  ddl_happy.out  ddl_unhappy.out  dml_happy.out  dml_happy_pg13.out  dml_happy_pg14-16.out  dml_unhappy.out  dml_unhappy_pg12.out  dml_unhappy_pg13-16.out  dml_unhappy_pg13.out  dml_unhappy_pg14-15.out  dml_unhappy_pg16.out  dml_variation_happy_pg12.out  dml_variation_happy_pg13.out  dml_variation_happy_pg14.out  happy.out  import_foreign_schema_extra.out  import_foreign_schema_happy.out  import_foreign_schema_unhappy.out  insert_select.out  insert_select_happy.out  insert_select_happy_shakujo.out  insert_select_unhappy.out  manual_tutorial.out  otable_of_constr.out  otable_of_constr2.out  otable_of_constr3.out  (+50 more)
include/: alter_role.h  create_role.h  drop_role.h  grant_revoke_table.h  prepare_execute.h  stub_connector.h  stub_manager.h  syscachecmds.h  table_managercmds.h  tg_common.h  tsurugi.h  tsurugi_fdw.h  tsurugi_utils.h
message-broker/example/: CMakeLists.txt  main.cpp  oltp_receiver.cpp  oltp_receiver.h  worker.cpp  worker.h
message-broker/example/expected/: result.txt
message-broker/example/expected/tsurugi/metadata/: oid
ogawayama-wrapper/: CMakeLists.txt
ogawayama-wrapper/include/: datatype.h  dispatcher.h  error_code.h
ogawayama-wrapper/src/: CMakeLists.txt  dispatcher.cpp
ogawayama-wrapper/test/stub/: CMakeLists.txt  result_set.cpp
ogawayama-wrapper/test/stub/include/ogawayama/common/: shared_memory.h
ogawayama-wrapper/test/tester/: CMakeLists.txt  tester.c
ogawayama_fdw/: Makefile  deparse.c  helper_funcs.c  ogawayama_fdw--0.1.sql  ogawayama_fdw.c  ogawayama_fdw.control  ogawayama_fdw.cpp  ogawayama_fdw.h  shippable.c  tsurugi_prepare.h  tsurugi_utils.cpp  tsurugi_utils.h
ogawayama_fdw/test/ogawayama-wrapper/src/: CMakeLists.txt  dispatcher.cpp
ogawayama_fdw/test/tester/: CMakeLists.txt  tester.cpp
sample/: python_app_run.sh
scripts/: create_tsurugi_tables.sql  devenv.sh  devenv2.sh  drop_tsurugi_tables.sql  install_dependencies.sh  install_deps.sh  test.sh  ubuntu.deps
sql/: alternative.sql  case_sensitive_happy.sql  case_sensitive_unhappy.sql  ch-benchmark-ddl.sql  create_index.sql  create_index_happy.sql  create_table.sql  create_table_happy.sql  create_table_restrict.sql  create_table_syntax_type.sql  create_table_unhappy.sql  data_types.sql  data_types_happy.sql  data_types_unhappy.sql  ddl_happy.sql  ddl_unhappy.sql  dml_happy.sql  dml_happy_pg13.sql  dml_happy_pg14-16.sql  happy.sql  (+71 more)
src/common/: CMakeLists.txt  connection.cpp  init.c  tsurugi.cpp
src/common/include/: tg_common.h  tsurugi.h
(+839 files in other folders)
